--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="nav-wrapper container">
       <span id="logo-container" class="brand-logo">
         <a href="http://openinnovationnetwork.net" >Open Innovation Network Project</a>
-        | <a href="#" >YOUR_PROJECT_NAME</a>
+        | <a href="#" >Itzvah</a>
       </span>
       
       
